scripts/Users/14/3/171/compile.err
HiLoAutograderTest.java:4: error: class HiLo is public, should be declared in a file named HiLo.java
public class HiLo {
       ^
1 error
